--- a/snippets/pillars.liquid
+++ b/snippets/pillars.liquid
@@ -1,4 +1,4 @@
-<div class="pillar hidden-xs">
+<div class="pillar">
   <a class="full-w" href="/pages/collaborate" title="collaborate with Fello">
     <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp" style="border-right-width: 3.5px;">
       <img src="{{ 'fello_ambassadors.jpg' | asset_url }}" alt="Fello Collaboration">
@@ -13,7 +13,7 @@
   </a>
 </div>
 
-<div class="pillar hidden-xs">
+<div class="pillar">
   <a class="full-w" href="/pages/kalani" title="shop kalani">
     <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp" style="border-left-width: 3.5px;">
       <img src="{{ 'shop-kalani.jpg' | file_url }}" alt="Shop Kalani">
@@ -28,78 +28,14 @@
   </a>
 </div>
 
-<div class="pillar hidden-xs">
+<div class="pillar">
   <a class="full-w" href="/pages/find-your-face" title="shop instagram">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp" style="border-left-width: 6.5px; border-right-width: 6.5px;">
+    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 amb panel sharp" style="border-top-width: 13px; border-left-width: 6.5px; border-right-width: 6.5px;">
       <img src="{{ 'find-your-face.jpg' | file_url }}" alt="Find Your Face">
       <div class="panel-body text-center">
         <div class="pillar-cover row-eq-height">
           <div class="v-center full-w">
             <h2 class="white"><strong>FIND YOUR FACE</strong></h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </a>
-</div>
-
-<!-- SMALL SCREENS -->
-<div class="pillar hidden-sm hidden-md hidden-lg">
-  <a class="full-w" href="/pages/collaborate" title="collaborate with Fello">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp" style="
-      border: none;
-      margin: auto;
-      float: none;
-      padding: 10px;
-      clear: both;
-      ">
-      <img src="{{ 'fello_ambassadors.jpg' | asset_url }}" alt="Fello Collaboration">
-      <div class="panel-body text-center">
-        <div class="pillar-cover row-eq-height">
-          <div class="v-center full-w">
-            <h2 class="white"><strong>COLLABORATE</strong></h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </a>
-</div>
-
-<div class="pillar hidden-sm hidden-md hidden-lg">
-  <a class="full-w" href="/pages/find-your-face" title="shop instagram">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp" style="
-      border: none;
-      margin: auto;
-      float: none;
-      padding: 10px;
-      clear: both;
-      ">
-      <img src="{{ 'find-your-face.jpg' | file_url }}" alt="Find Your Face">
-      <div class="panel-body text-center">
-        <div class="pillar-cover row-eq-height">
-          <div class="v-center full-w">
-            <h2 class="white"><strong>FIND YOUR FACE</strong></h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </a>
-</div>
-
-<div class="pillar hidden-sm hidden-md hidden-lg">
-  <a class="full-w" href="/pages/kalani" title="shop kalani">
-    <div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 panel amb sharp" style="
-      border: none;
-      margin: auto;
-      float: none;
-      padding: 10px;
-      clear: both;
-      ">
-      <img src="{{ 'shop-kalani.jpg' | file_url }}" alt="Shop Kalani">
-      <div class="panel-body text-center">
-        <div class="pillar-cover row-eq-height">
-          <div class="v-center full-w">
-            <h2 class="white"><strong>SHOP KALANI</strong></h2>
           </div>
         </div>
       </div>
