--- a/snippets/product-simple.liquid
+++ b/snippets/product-simple.liquid
@@ -43,7 +43,7 @@
           
           <div class="main-image-wapper text-center" id="ProductPhoto">
             {% if product.title contains 'Kalani' %}
-              <img src="{{ 'kalani-header.jpg' | file_url }}" alt="The Kalani">
+              <img src="{{ 'kalani-header-mobile.jpg' | file_url }}" alt="The Kalani">
             {% endif %}
             {% assign featured_image = product.selected_or_first_available_variant.featured_image | default: product.featured_image %}
             <img style="width: 105%; margin-top: 10px;" class="main-image" src="{{ featured_image | img_url: 'grande' }}" alt="{{ featured_image.alt | escape }}" id="ProductPhotoImg"{% if settings.product_image_zoom_type == 'zoom-in' %} data-zoom="{{ featured_image | img_url: '1024x1024' }}"{% endif %} data-image-id="{{ featured_image.id }}">
@@ -274,12 +274,11 @@
       <a id="AddToCart"
         class="v-center no-margin full-w button button-add-cart boutique__add-to-cart"
         data-pid="{{ product.variants.first.id }}"
-        style="padding: 5%;"
         >
-        <span id="AddToCartText">
+        <span id="AddToCartText" style="display: inline-block; margin-top: 15px;">
           {{ 'products.product.add_to_cart' | t }}
         </span>
-        <span style="color: black; font-size: 10px; display: block;">
+        <span style="color: black; font-size: 10px; display: block; margin-bottom: 10px;">
           (if this is being slow, try refreshing the page)
         </span>
       </a>
