--- a/templates/page.collaborations.liquid
+++ b/templates/page.collaborations.liquid
@@ -13,6 +13,9 @@
     Email us at <span class="highlight">contact@felloeyewear.com</span> to Collaborate.
     <br />
     <br />
+    We love to work with other brands, photographers, or just fashionable people.
+    <br />
+    <br />
     We are excited to speak with you.
   </p>
 </div>
