--- a/assets/script.js.liquid
+++ b/assets/script.js.liquid
@@ -565,6 +565,10 @@
       $(document).on('click',".boutique__add-to-cart", function(event) {
         if (window.location.href.indexOf('kalani') > -1) {
           event.preventDefault();
+
+          var pbhtmlstr = '<div id="purchase-progress" class="sharp progress" style="z-index: 10000; margin-top: -5%;"><div class="active progress-bar progress-bar-info progress-bar-striped" role="progressbar" aria-valuenow="35" aria-valuemin="0" aria-valuemax="100" style="width: 35%;"><span class="sr-only"></span></div></div>';
+          $("#product-variants.screen-mobile-xs").prepend(pbhtmlstr);
+
           var id = $("#product-selectors").val();
           var quanlity =  $("#Quantity").val();
           if(jQuery.type(id) === "undefined" && jQuery.type(quanlity) == 1){
@@ -576,6 +580,7 @@
             } else if (jQuery.type(quanlity) < 1){
               quanlity = 1;
             }
+
           $.ajax({
             url: '/cart/add.js',
             type: 'POST',
@@ -585,8 +590,8 @@
               id: id
               },
               success: function(response) {
-                console.log("SUCCESS");
                 window.location = "/checkout";
+                $("#purchase-progress").remove();
               }
             });
           } else {
