kalani price change to 59

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -245,6 +245,16 @@ hr.highlight {
 .site-banner p {
   margin: auto;
 }
+@media (min-width: 786px) {
+  #header {
+    margin-top: 50px;
+  }
+}
+@media (max-width: 786px) {
+  #header {
+    margin-top: 0px !important;
+  }
+}
 /* End Header */
 /* Start Navbar */
 .header.style3 .box-settings {
