--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -52,13 +52,13 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
     <button class="close-box" type="button" data-dismiss="modal" aria-hidden="true">×</button>
   </div>
   
-  <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
+<!--   <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
     <small>
       <p class="v-center">Fello's Summer Sale</strong> 10% OFF</p>
     <p class="v-center"><small>the all new <strong>Kalani's</strong>,<small> use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>sskalani</strong></code></small></p>
     </small>
     <button type="button" class="close-box" data-dismiss="modal" aria-hidden="true" style="float: right; margin-top: -40px;">×</button>
-  </div>
+  </div> -->
   {% endunless %}
 
   
