--- a/snippets/product-simple.liquid
+++ b/snippets/product-simple.liquid
@@ -249,7 +249,7 @@
               $("#product-selectors").val("45737780679");
               $(this).css('border', '1px solid black');
               $("#mob-pink").css('border', 'none');
-              $(".main-image").attr("src", "//cdn.shopify.com/s/files/1/1321/8937/products/kg1-front_1024x1024.png?v=1499283920")
+              $(".main-image").attr("src", "//cdn.shopify.com/s/files/1/1321/8937/products/kg2-front_8a22917e-75bb-4eed-acb4-3e61450bfb61_1024x1024.png?v=1500229542")
             });
 
             $("#mob-pink").on('click', function() {
@@ -289,7 +289,7 @@
 </div>
 
 
-{% if product.title contains "Collaboration" or product.price < 7000 %}
+{% if product.title contains "Collaboration" or product.price == 6000 %}
 {% else %}
 <div class="container">
 
