--- a/snippets/shop-sale.liquid
+++ b/snippets/shop-sale.liquid
@@ -4,7 +4,7 @@
 
   <div class="shop-sale">
     <h1 class="no-margin" style="line-height: 0.85; font-weight: 700;">
-      $10<span style="vertical-align: text-top;">+</span> OFF<br />
+      10<span style="vertical-align: text-top;">%</span> OFF<br />
       <span class="small-caps"><small>all classic models</small></span>
     </h1>
     <br />
