miss teen usa banner

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -52,13 +52,20 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
     <button class="close-box" type="button" data-dismiss="modal" aria-hidden="true">×</button>
   </div>
   
-<!--   <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
+  <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
     <small>
-      <p class="v-center">Fello's Summer Sale</strong> 10% OFF</p>
-    <p class="v-center"><small>the all new <strong>Kalani's</strong>,<small> use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>sskalani</strong></code></small></p>
+      <p class="v-center"><strong>Miss Teen USA Sale</strong> $40 OFF</p>
+      <p class="v-center"><small>the all new <strong>Kalani's</strong></p>
     </small>
     <button type="button" class="close-box" data-dismiss="modal" aria-hidden="true" style="float: right; margin-top: -40px;">×</button>
-  </div> -->
+  </div>
+  <!-- <div class="text&#45;center site&#45;banner full&#45;w row&#45;eq&#45;height visible&#45;xs minor&#45;h&#45;pads"> -->
+  <!--   <small> -->
+    <!--     <p class="v&#45;center"><strong>Fello's Summer Sale</strong> 10% OFF</p> -->
+  <!--     <p class="v&#45;center"><small>the all new <strong>Kalani's</strong>,<small> use code:</small> <code class="blue" style="background&#45;color: rgb(253, 138, 94);"><strong>sskalani</strong></code></small></p> -->
+  <!--   </small> -->
+  <!--   <button type="button" class="close&#45;box" data&#45;dismiss="modal" aria&#45;hidden="true" style="float: right; margin&#45;top: &#45;40px;">×</button> -->
+  <!-- </div> -->
   {% endunless %}
 
   
