--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -236,7 +236,7 @@ hr.highlight {
 }
 .site-banner {
   height: 50px;
-  background-color: #01dddd;
+  background-color: #ff448a;
   font-size: 17px;
   position: fixed;
   top: 0px;
