--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -49,15 +49,14 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
       Get into the Summer Spirit, <span style="border-bottom: 1px solid black;">10% off all classic product lines</span>.
       <small>use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>summertime</strong></code>
     </p>
-    <button class="close-box" type="button" data-dismiss="modal" aria-hidden="true">×</button>
+    <button class="close-box bigs" type="button" data-dismiss="modal" aria-hidden="true">×</button>
   </div>
   
   <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
     <small>
-      <p class="v-center"><strong>Miss Teen USA Sale</strong> $40 OFF</p>
-      <p class="v-center"><small>the all new <strong>Kalani's</strong></p>
+      <p class="v-center" style="margin-top: 12px; font-family: sans-serif;"><strong>Miss Teen USA Kalani Sale</strong></p>
     </small>
-    <button type="button" class="close-box" data-dismiss="modal" aria-hidden="true" style="float: right; margin-top: -40px;">×</button>
+    <button type="button" class="close-box mobes" data-dismiss="modal" aria-hidden="true" style="float: right; margin-top: -25px;">×</button>
   </div>
   <!-- <div class="text&#45;center site&#45;banner full&#45;w row&#45;eq&#45;height visible&#45;xs minor&#45;h&#45;pads"> -->
   <!--   <small> -->
