post ACs to plug application

--- a/assets/style.css.liquid
+++ b/assets/style.css.liquid
@@ -242,6 +242,11 @@ hr.highlight {
   top: 0px;
   z-index: 1000;
 }
+@media (min-width: 768px) {
+  .site-banner {
+    background-color: #f36298;
+  }
+}
 .site-banner p {
   margin: auto;
 }
