--- a/snippets/shop-sale.liquid
+++ b/snippets/shop-sale.liquid
@@ -7,6 +7,8 @@
       10<span style="vertical-align: text-top;">%</span> OFF<br />
       <span class="small-caps"><small>all classic models</small></span>
     </h1>
+    <small>use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>bak2skool</strong></code>
+    <br />
     <br />
     <a href="/collections/all", title="Shop Sale">
       <div class="btn btn-lg btn-primary sharp">
