--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -46,15 +46,15 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
   {% unless handle contains 'pay-invoice' or handle contains 'cb' or handle contains 'thank-you' or handle contains 'kalani' %}
   <div class="text-center site-banner full-w row-eq-height hidden-xs minor-h-pads">
     <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.
-      Get into the Summer Spirit, <span style="border-bottom: 1px solid black;">10% off all classic product lines</span>.
-      <small>use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>summertime</strong></code>
+      Go back to school in style, <span style="border-bottom: 1px solid black;">10% off all classic product lines</span>.
+      <small>use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>bak2skool</strong></code>
     </p>
     <button class="close-box bigs" type="button" data-dismiss="modal" aria-hidden="true">×</button>
   </div>
   
   <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads">
     <small>
-      <p class="v-center" style="margin-top: 12px; font-family: sans-serif;"><strong>Miss Teen USA Kalani Sale</strong></p>
+      <p class="v-center" style="margin-top: 12px; font-family: sans-serif; color: #3573ca;"><strong>Back to school Sale!</strong></p>
     </small>
     <button type="button" class="close-box mobes" data-dismiss="modal" aria-hidden="true" style="float: right; margin-top: -25px;">×</button>
   </div>
