after new years

--- a/snippets/index_h10.liquid
+++ b/snippets/index_h10.liquid
@@ -20,7 +20,7 @@
   </div>
 
 
-  <img class="hidden-xs" src="{{ 'blurred-vision-angle-2.jpg' | file_url }}" alt="Fello Eyewear">
+  <img class="hidden-xs" src="{{ 'blurred-vision-angle-2.jpg' | file_url }}" style="width: 150%;" alt="Fello Eyewear">
   
   <a href="/pages/kalani" title="shop kalani" id="for-ios" class="hidden visible-xs">
     <img class="full-w" src="{{ 'kalani-front-pg-tk-mobile.jpg' | file_url }}" alt="Shop Kalani">
@@ -74,7 +74,7 @@
     // use it when you're looking for something more subtle.
   };
   $(document).ready(function() {
-    $('.odometer').html(4117);
+    $('.odometer').html(4311);
   });
   $(document).ready(function() {
     if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent) ) {
