--- a/snippets/product-simple.liquid
+++ b/snippets/product-simple.liquid
@@ -101,8 +101,8 @@
             {% if product.price > 7000 or product.title contains 'Kalani' %}
               {% unless product.title contains 'Kalani' %}
                 <br />
-                <p class="no-margin"><span class="small-caps">Use Code:</span> <code>summertime</code></p>
-                <h6>10% Off Classic Pairs</h6>
+                <p class="no-margin"><span class="small-caps">Use Code:</span> <code>tistheseason</code></p>
+                <h6>15% Off Classic Pairs</h6>
                 <hr />
               {% endunless %}
             {% endif %}
