--- a/snippets/shop-sale.liquid
+++ b/snippets/shop-sale.liquid
@@ -4,10 +4,10 @@
 
   <div class="shop-sale">
     <h1 class="no-margin" style="line-height: 0.85; font-weight: 700;">
-      10<span style="vertical-align: text-top;">%</span> OFF<br />
+      15<span style="vertical-align: text-top;">%</span> OFF<br />
       <span class="small-caps"><small>all classic models</small></span>
     </h1>
-    <small>use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>bak2skool</strong></code>
+    <small>use code:</small> <code class="blue" style="background-color: rgb(253, 138, 94);"><strong>tistheseason</strong></code>
     <br />
     <br />
     <a href="/collections/all", title="Shop Sale">
