--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -44,17 +44,17 @@ src="https://www.facebook.com/tr?id=156715738012257&ev=PageView&noscript=1"
 <body class="home {% if customer %}customer-logged-in {% endif %}template-{{ template | replace: '.', ' ' | truncatewords: 1, '' | handle }}" id="{{ page_title | handle }}" style="padding-right: 0;">
 
   {% unless handle contains 'pay-invoice' or handle contains 'cb' or handle contains 'thank-you' or handle contains 'kalani' %}
-  <div class="text-center site-banner full-w row-eq-height hidden-xs minor-h-pads" style="background-color: #cb6be6 !important;">
+  <div class="text-center site-banner full-w row-eq-height hidden-xs minor-h-pads" style="background-color: #ea235b !important;">
     <p class="v-center"><strong>FREE RETURNS</strong> on all purchases.
-      Holidays are coming, give a gift <span style="border-bottom: 1px solid black;">with 15% off Fello classics</span>.
-      <small>use code:</small> <code class="blue" style="background-color: black;"><strong>tistheseason</strong></code>
+      Be a Valentine, show your love with <span style="border-bottom: 1px solid black;">15% off any pair</span>.
+      <small>use code:</small> <code class="blue" style="background-color: black;"><strong>valentine</strong></code>
     </p>
     <button class="close-box bigs" type="button" data-dismiss="modal" aria-hidden="true">×</button>
   </div>
   
-  <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads" style="background-color: #f29737 !important;">
+  <div class="text-center site-banner full-w row-eq-height visible-xs minor-h-pads" style="background-color: #ea235b !important;">
     <small>
-      <p class="v-center" style="margin-top: 12px; font-family: sans-serif; color: #3573ca;"><strong>Holiday Season Sale!</strong></p>
+      <p class="v-center" style="margin-top: 12px; font-family: sans-serif; color: black;"><strong>Valentine's Day Sale!</strong></p>
     </small>
     <button type="button" class="close-box mobes" data-dismiss="modal" aria-hidden="true" style="float: right; margin-top: -25px;">×</button>
   </div>
