--- a/snippets/shop-sale-sm.liquid
+++ b/snippets/shop-sale-sm.liquid
@@ -7,9 +7,10 @@
     clear: both;
     padding-top: 190px;
     ">
-    $10<span style="vertical-align: text-top;">+</span> OFF<br />
-    <span class="small-caps"><small>all classic & bamboo models</small></span>
+    15% OFF<br />
+    <span class="small-caps"><small>any & all models</small></span>
   </h1>
+  <small>use code:</small> <code style="background-color: #ea235b; color: black;"><strong>valentine</strong></code>
   <br />
   <a href="/collections/all", title="Shop Sale">
     <div class="btn btn-lg btn-primary sharp">
